--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,8 +1,6 @@
 <%- include('partials/header'); -%>
 
-<h1>Posts</h1>
-
-<p><%= blogTitle %></p>
+<h1><%= blogTitle %></h1>
 
 <p><%= blogPost %></p>
 
