--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@
     color: #1abc9c !important;
 }
 
-.footer-padding {
+/* .footer-padding {
 	padding-bottom: 60px;
 }
 
@@ -34,4 +34,17 @@
 	margin-top: 25px;
 	font-size: 12px;
   color: #fff;
+} */
+
+.footer-padding {
+	padding-bottom: 200px;
+}
+
+.footer{
+    padding-top: 15px;
+	text-align: center;
+	bottom: 0;
+	height: 60px;
+    color: #fff;
+	background-color: #1abc9c; 
 }
